--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,15 @@
-<h1>Welcome to the home page</h1>
+
+<html>
+<body>
+
+
+<h1>Welcome to the Home Page</h1>
+
+<p>
+<h3>Click this image to Predict Score:</h3> <a href="http://127.0.0.1:5000/predictdata">
+<img alt="Predict Score" src="static\boy_thinking.jpg" width="200" height="400">
+</a>
+</p>
+
+</body>
+</html>
